--- a/nginx.conf
+++ b/nginx.conf
@@ -2,20 +2,19 @@ server {
     listen 80;
     server_name api-server.197.253.124.146.sslip.io;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    # Redirect HTTP to HTTPS
+    return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
     server_name api-server.197.253.124.146.sslip.io;
 
-    ssl_certificate /etc/nginx/ssl/server.crt;
-    ssl_certificate_key /etc/nginx/ssl/server.key;
+    ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+    ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
 
-    root /var/www/html/public;
-    index index.php index.html index.htm;
+    root /app/public;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -23,8 +22,7 @@ server {
 
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
-        fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
+        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
