--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,26 +26,9 @@ services:
       - "443:443"
     volumes:
       - .:/app
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/nginx/ssl
+      - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - php-fpm
-    networks:
-      - app-network
-
-  ftp:
-    image: fauria/vsftpd
-    restart: always
-    environment:
-      FTP_USER: "ftpuser"
-      FTP_PASS: "ftppass"
-      PASV_ADDRESS: "127.0.0.1"
-    volumes:
-      - .:/home/vsftpd
-    ports:
-      - "20:20"
-      - "21:21"
-      - "21100-21110:21100-21110"
     networks:
       - app-network
 
