--- a/nginx.conf
+++ b/nginx.conf
@@ -22,8 +22,8 @@ http {
     server_names_hash_bucket_size 128;  # Required for some vhosts
 
     server {
-        listen ${PORT};
-        listen [::]:${PORT};
+        listen 80;
+        listen [::]:80;
         server_name localhost;
 
         root /app/public;  # Adjust this to your Laravel public directory
