--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,7 @@ http {
         listen [::]:80;
         server_name localhost;
 
-        root /app/public;  # Adjust this to your Laravel public directory
+        root /public;  # Adjust this to your Laravel public directory
 
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-Content-Type-Options "nosniff";
