--- a/nginx.conf
+++ b/nginx.conf
@@ -1,58 +1,33 @@
-worker_processes 5;
-daemon off;
+server {
+    listen 80;
+    server_name api-server.197.253.124.146.sslip.io;
 
-worker_rlimit_nofile 8192;
-
-events {
-    worker_connections 4096;  # Default: 1024
+    # Redirect HTTP to HTTPS
+    return 301 https://$host$request_uri;
 }
 
-http {
-    include    $!{nginx}/conf/mime.types;
-    index    index.html index.htm index.php;
+server {
+    listen 443 ssl;
+    server_name api-server.197.253.124.146.sslip.io;
 
-    default_type application/octet-stream;
-    log_format   main '$remote_addr - $remote_user [$time_local]  $status '
-        '"$request" $body_bytes_sent "$http_referer" '
-        '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log /dev/stdout;
-    error_log /dev/stdout;
-    sendfile     on;
-    tcp_nopush   on;
-    server_names_hash_bucket_size 128; # this seems to be required for some vhosts
+    ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+    ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
 
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name localhost;
+    root /app/public;
+    index index.php index.html;
 
-        root /public;  # Adjust this to your Laravel public directory
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-Content-Type-Options "nosniff";
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
 
-        index index.php;
-
-        charset utf-8;
-
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
-        }
-
-        location = /favicon.ico { access_log off; log_not_found off; }
-        location = /robots.txt  { access_log off; log_not_found off; }
-
-        error_page 404 /index.php;
-
-        location ~ \.php$ {
-            fastcgi_pass php-fpm:9000;  # Points to your PHP-FPM service in Docker Compose
-            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-            include fastcgi_params;
-            include fastcgi.conf;
-        }
-
-        location ~ /\.(?!well-known).* {
-            deny all;
-        }
+    location ~ /\.ht {
+        deny all;
     }
 }
