reverting to working

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,10 +10,10 @@ server {
     listen 443 ssl;
     server_name api-server.197.253.124.146.sslip.io;
 
-    ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-    ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+    ssl_certificate /etc/nginx/ssl/ssl-cert-snakeoil.pem;
+    ssl_certificate_key /etc/nginx/ssl/ssl-cert-snakeoil.key;
 
-    root /app/public;
+    root /public;
     index index.php index.html;
 
     location / {
