--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,19 @@
 server {
     listen 80;
-    server_name api-server.197.253.124.146.sslip.io;
+    server_name localhost;
 
-    # Redirect HTTP to HTTPS
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name api-server.197.253.124.146.sslip.io;
-
-    ssl_certificate /etc/nginx/ssl/ssl-cert-snakeoil.pem;
-    ssl_certificate_key /etc/nginx/ssl/ssl-cert-snakeoil.key;
-
-    root /public;
-    index index.php index.html;
+    root /app/public;
+    index index.php index.html index.htm;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
