--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,36 @@
-server {
-    listen 80;
-    server_name localhost;
+# /app/nginx.conf
 
-    root /app/public;
-    index index.php index.html index.htm;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+http {
+    include mime.types;
+    default_type application/octet-stream;
 
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
+    sendfile on;
+    keepalive_timeout 65;
 
-    location ~ /\.ht {
-        deny all;
+    server {
+        listen 80;
+        server_name localhost;
+
+        root /app/public;
+        index index.php index.html index.htm;
+
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+
+        location ~ /\.ht {
+            deny all;
+        }
     }
 }
