--- a/.coolify.yml
+++ b/.coolify.yml
@@ -15,10 +15,10 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
     volumes:
-      - .:/app
+      - .:/var/www/html
     ports:
       - "80:80"
-    command: /bin/sh -c "./setup.sh && php-fpm"
+    command: /bin/sh -c "./setup.sh && php artisan serve --host=0.0.0.0 --port=80"
 
 networks:
   default:
