--- a/nginx.conf
+++ b/nginx.conf
@@ -1,36 +1,38 @@
-server {
-    listen 80;
-    server_name api-server.197.253.124.146.sslip.io;
-    
-    # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
+worker_processes auto;
+
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name api-server.197.253.124.146.sslip.io;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    ssl_certificate /etc/letsencrypt/live/api-server.197.253.124.146.sslip.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api-server.197.253.124.146.sslip.io/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    sendfile        on;
+    keepalive_timeout  65;
 
-    root /app/public;
-    index index.php index.html;
+    server {
+        listen 80;
+        server_name api-server.197.253.124.146.sslip.io;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+        root /app/public;
 
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_index index.php;
-    }
+        index index.php index.html index.htm;
 
-    location ~ /\.ht {
-        deny all;
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
+
+        location ~ /\.ht {
+            deny all;
+        }
     }
 }
