--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;  # Use the correct path for mime.types
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
     sendfile        on;
@@ -13,9 +13,10 @@ http {
 
     server {
         listen 80;
+        listen 443 ssl;
         server_name api-server.197.253.124.146.sslip.io;
 
-        root /app/public;
+        root /var/www/html/public;
 
         index index.php index.html index.htm;
 
@@ -25,7 +26,7 @@ http {
 
         location ~ \.php$ {
             try_files $uri =404;
-            fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+            fastcgi_pass unix:/var/run/php/php8.3-fpm.sock;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
@@ -34,5 +35,12 @@ http {
         location ~ /\.ht {
             deny all;
         }
+
+        # SSL configuration
+        ssl_certificate /etc/letsencrypt/live/api-server.197.253.124.146.sslip.io/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api-server.197.253.124.146.sslip.io/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
     }
 }
