--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,13 @@
-worker_processes auto;
-
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
+    include /etc/nginx/mime.types;
 
     server {
         listen 80;
-        listen 443 ssl;
-        server_name api-server.197.253.124.146.sslip.io;
+        server_name localhost;
 
         root /var/www/html/public;
-
         index index.php index.html index.htm;
 
         location / {
@@ -25,22 +15,10 @@ http {
         }
 
         location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_pass unix:/var/run/php/php8.3-fpm.sock;
-            fastcgi_index index.php;
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass unix:/run/php/php8.3-fpm.sock;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
-
-        location ~ /\.ht {
-            deny all;
-        }
-
-        # SSL configuration
-        ssl_certificate /etc/letsencrypt/live/api-server.197.253.124.146.sslip.io/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api-server.197.253.124.146.sslip.io/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
     }
 }
