ssl - still updating

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 events {}
 
 http {
-    # include /etc/nginx/mime.types;
+    include mime.types;
 
     server {
         listen 80;
@@ -15,10 +15,9 @@ http {
         }
 
         location ~ \.php$ {
-            include snippets/fastcgi-php.conf;
+            include fastcgi_params;
             fastcgi_pass unix:/run/php/php8.3-fpm.sock;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
         }
     }
 }
