--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,22 @@
-events {}
+worker_processes auto;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-    include mime.types;
+    include       /mime.types;  # Use the correct path for mime.types
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
 
     server {
         listen 80;
-        server_name localhost;
+        server_name api-server.197.253.124.146.sslip.io;
 
-        root /var/www/html/public;
+        root /app/public;
+
         index index.php index.html index.htm;
 
         location / {
@@ -15,9 +24,15 @@ http {
         }
 
         location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+            try_files $uri =404;
+            fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+            fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
+
+        location ~ /\.ht {
+            deny all;
         }
     }
 }
