--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-    include       /mime.types;  # Use the correct path for mime.types
+    include       mime.types;  # Use the correct path for mime.types
     default_type  application/octet-stream;
 
     sendfile        on;
