--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,24 @@
-worker_processes auto;
-
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
-    include       mime.types;  # Use the correct path for mime.types
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
+    include /etc/nginx/mime.types;
 
     server {
         listen 80;
-        server_name api-server.197.253.124.146.sslip.io;
+        server_name localhost;
 
-        root /app/public;
+        # Redirect HTTP to HTTPS
+        return 301 https://$host$request_uri;
+    }
 
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/ssl/server.crt;
+        ssl_certificate_key /etc/nginx/ssl/server.key;
+
+        root /var/www/html/public;
         index index.php index.html index.htm;
 
         location / {
@@ -24,15 +26,9 @@ http {
         }
 
         location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
-        }
-
-        location ~ /\.ht {
-            deny all;
+            fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
     }
 }
