--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,54 @@
-events {}
+# nginx.conf
+
+user  www-data;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
 
 http {
-    include /etc/nginx/mime.types;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    server {
-        listen 80;
-        server_name localhost;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-        # Redirect HTTP to HTTPS
-        return 301 https://$host$request_uri;
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    # Gzip settings
+    gzip on;
+    gzip_disable "msie6";
+
+    include /etc/nginx/conf.d/*.conf;
+}
+
+server {
+    listen       80;
+    server_name  localhost;
+
+    root   /var/www/html/public;
+    index  index.php index.html index.htm;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    server {
-        listen 443 ssl;
-        server_name localhost;
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+    }
 
-        ssl_certificate /etc/nginx/ssl/server.crt;
-        ssl_certificate_key /etc/nginx/ssl/server.key;
-
-        root /var/www/html/public;
-        index index.php index.html index.htm;
-
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
-        }
-
-        location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_pass unix:/run/php/php8.3-fpm.sock;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
+    location ~ /\.ht {
+        deny  all;
     }
 }
